--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@shopify/cli-hydrogen": "^5.5.1",
     "@shopify/hydrogen": "^2023.7.13",
     "@shopify/remix-oxygen": "^1.1.8",
+    "framer-motion": "^10.16.4",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^3.6.6",
