--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@relume_io/relume-tailwind": "^0.0.10",
+    "@relume_io/relume-ui": "^0.0.19",
     "@remix-run/react": "1.19.1",
     "@shopify/cli": "3.49.2",
     "@shopify/cli-hydrogen": "^5.5.1",
@@ -24,7 +26,8 @@
     "isbot": "^3.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-use-measure": "^2.1.1"
+    "react-use-measure": "^2.1.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@remix-run/dev": "1.19.1",
