--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "graphql-tag": "^2.12.6",
     "isbot": "^3.6.6",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-scroll-trigger": "^0.6.14",
     "react-use-measure": "^2.1.1",
     "tailwindcss-animate": "^1.0.7"
   },
